--- a/StarRating/StarRating/Storyboards/Base.lproj/Main.storyboard
+++ b/StarRating/StarRating/Storyboards/Base.lproj/Main.storyboard
@@ -33,7 +33,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IyM-pb-JNn" customClass="CustomControl" customModule="StarRating" customModuleProvider="target">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="e3X-hN-j9Q"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="IyM-pb-JNn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="S51-bv-22u"/>
+                            <constraint firstItem="IyM-pb-JNn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uq5-2y-xaC"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="ekS-Hz-XQe"/>
