--- a/CustomControls-Rating/CustomControls-Rating/Storyboards/Base.lproj/Main.storyboard
+++ b/CustomControls-Rating/CustomControls-Rating/Storyboards/Base.lproj/Main.storyboard
@@ -17,7 +17,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X1q-6d-HEV" customClass="CustomControl" customModule="CustomControls_Rating" customModuleProvider="target">
+                                <rect key="frame" x="20" y="385.5" width="374" height="125"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="uVz-FA-Px4"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="X1q-6d-HEV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Fva-WR-7kU"/>
+                            <constraint firstItem="X1q-6d-HEV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RJE-MF-nqv"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="ORM-5G-8Ej"/>
