--- a/CustomControl/CustomControl/Base.lproj/Main.storyboard
+++ b/CustomControl/CustomControl/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                         <subviews>
                             <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w49-c6-p3c" customClass="CustomControl" customModule="CustomControl" customModuleProvider="target">
                                 <rect key="frame" x="93" y="291" width="240" height="128"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="updateRating:" destination="phu-kF-Csm" eventType="valueChanged" id="HNV-fl-ka3"/>
                                 </connections>
