--- a/Custom Controls/Custom Controls/Base.lproj/Main.storyboard
+++ b/Custom Controls/Custom Controls/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wLK-Nz-SM8" customClass="CustomControl" customModule="Custom_Controls" customModuleProvider="target">
                                 <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="4fU-Gu-tCL"/>
                                 </connections>
