--- a/Star Rating/Star Rating/Base.lproj/Main.storyboard
+++ b/Star Rating/Star Rating/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--xfghj-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Star_Rating" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,26 +19,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zJM-w4-q1n" customClass="CustomControl" customModule="Star_Rating" customModuleProvider="target">
-                                <rect key="frame" x="44" y="384" width="326" height="128"/>
-                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="73" y="431" width="268" height="30"/>
                                 <connections>
-                                    <action selector="starRater:" destination="kLw-yE-S14" eventType="valueChanged" id="TIO-nr-hc4"/>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="UtS-M8-mKE"/>
                                 </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="zJM-w4-q1n" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KFq-Zg-uF1"/>
+                            <constraint firstItem="zJM-w4-q1n" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-2" id="KFq-Zg-uF1"/>
                             <constraint firstItem="zJM-w4-q1n" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ciK-aO-gHi"/>
-                            <constraint firstItem="zJM-w4-q1n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="44" id="nh6-gk-vVf"/>
-                            <constraint firstItem="zJM-w4-q1n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="296" id="sFO-2s-BDC"/>
+                            <constraint firstItem="zJM-w4-q1n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="73" id="nh6-gk-vVf"/>
+                            <constraint firstItem="zJM-w4-q1n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="343" id="sFO-2s-BDC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="bCS-JB-yNc"/>
+                    <navigationItem key="navigationItem" title="xfghj" id="bCS-JB-yNc"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <exit id="kLw-yE-S14" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="321.73913043478262" y="138.61607142857142"/>
         </scene>
