--- a/Custom Controls/Custom Controls/View/Main.storyboard
+++ b/Custom Controls/Custom Controls/View/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bSb-Mo-JmY" customClass="CustomControl" customModule="Custom_Controls" customModuleProvider="target">
                                 <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="updateRating:" destination="iBz-Af-NK9" eventType="valueChanged" id="PKn-4S-i7p"/>
                                     <action selector="updateRating:" destination="IIm-fb-3Qu" eventType="valueChanged" id="RiV-1F-rh7"/>
