--- a/CustomControls/CustomControls/Base.lproj/Main.storyboard
+++ b/CustomControls/CustomControls/Base.lproj/Main.storyboard
@@ -42,15 +42,36 @@
                                     <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="lUc-F5-AVF"/>
                                 </connections>
                             </view>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3VZ-FD-hjA">
+                                <rect key="frame" x="182.5" y="698" width="51" height="31"/>
+                                <connections>
+                                    <action selector="ratingSwitchAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="YjA-ML-fBe"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Turn on for 7 star rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rW5-wy-Dg8">
+                                <rect key="frame" x="117" y="749" width="180" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.2023637559" green="0.8980392157" blue="0.70665930880000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="oKP-lj-Xd9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="CNd-Ti-zEz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rW5-wy-Dg8" secondAttribute="bottom" constant="92" id="DZi-Kg-SyQ"/>
+                            <constraint firstItem="rW5-wy-Dg8" firstAttribute="top" secondItem="3VZ-FD-hjA" secondAttribute="bottom" constant="20" id="G5t-eR-xCU"/>
+                            <constraint firstItem="rW5-wy-Dg8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Q0q-Z1-Ikz"/>
+                            <constraint firstItem="3VZ-FD-hjA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mjU-Qh-zf8"/>
                             <constraint firstItem="oKP-lj-Xd9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wVo-vO-B9O"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="zWm-Aq-JpE"/>
+                    <connections>
+                        <outlet property="customControl" destination="oKP-lj-Xd9" id="EJm-Lc-ka3"/>
+                        <outlet property="ratingLabelForSwitch" destination="rW5-wy-Dg8" id="ibA-eU-NeH"/>
+                        <outlet property="ratingSwitch" destination="3VZ-FD-hjA" id="HBh-QS-o81"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
