Stretch: Add flare animation to stars when selected

--- a/Star Ratings/Star Ratings/Base.lproj/Main.storyboard
+++ b/Star Ratings/Star Ratings/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                         <subviews>
                             <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ob8-kM-a4b" customClass="CustomControl" customModule="Star_Ratings" customModuleProvider="target">
                                 <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="updateRating:" destination="eGM-ea-SqV" eventType="valueChanged" id="Iov-oQ-wzi"/>
                                 </connections>
